Set up proper tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(cninja LANGUAGES CXX)
+enable_testing()
 
 add_executable(cninja)
 
@@ -24,3 +25,32 @@ install(
   RUNTIME DESTINATION
     bin
 )
+
+file(COPY tests DESTINATION .)
+
+set(FLAGS fast small full-lto thin-lto asan ubsan tsan debugmode debugsyms warnings gcc libcxx static examples tests)
+foreach(kind static shared executable)
+  add_test(
+    NAME ${kind}
+    COMMAND cninja
+    WORKING_DIRECTORY tests/${kind}
+  )
+
+  foreach(flag ${FLAGS})
+    add_test(
+      NAME ${kind}_${flag}
+      COMMAND cninja ${flag}
+      WORKING_DIRECTORY tests/${kind}
+    )
+
+    foreach(flag2 ${FLAGS})
+      if(NOT ${flag} STREQUAL ${flag2})
+        add_test(
+          NAME ${kind}_${flag}_${flag2}
+          COMMAND cninja ${flag} ${flag2}
+          WORKING_DIRECTORY tests/${kind}
+        )
+      endif()
+    endforeach()
+  endforeach()
+endforeach()
