Fix conflict between cpack and chocolatey

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -68,4 +68,4 @@ jobs:
     #   run: cd build && ctest -V
 
     - name: deploy
-      run: cd build && cpack -G ZIP
+      run: cd build && cmake --build . --target package
