--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/fmt"]
 	path = 3rdparty/fmt
 	url = https://github.com/fmtlib/fmt
+[submodule "3rdparty/filesystem"]
+	path = 3rdparty/filesystem
+	url = https://github.com/gulrak/filesystem
