--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories(cninja
   PRIVATE
     3rdparty/cxxopts/include
     3rdparty/fmt/include
+    3rdparty/filesystem/include
 )
 
 target_sources(cninja
