--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -38,6 +38,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: deps
       run:  |
+        git submodule update --init --recursive
+        
         if [ "$RUNNER_OS" == "Linux" ]; then
           sudo apt update
           sudo apt install clang-9 libc++-9-dev libc++abi-9-dev lld-9 ninja-build
