Add boost dependency

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -49,7 +49,7 @@ jobs:
           echo "::add-path::$PWD/llvm-mingw/bin"
           choco install ninja
         else
-          brew install ninja
+          brew install ninja boost
         fi
       shell: bash
 
