--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -58,8 +58,12 @@ jobs:
         CXXFLAGS: ${{ matrix.config.cxxflags }}
         CXX: ${{ matrix.config.cxx }}
       run: |
-        env
-        mkdir build && cd build && cmake ..
+        mkdir build && cd build
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          cmake -DBOOST_ROOT="$BOOST_ROOT_1_72_0" ..
+        else
+          cmake ..
+        fi
 
     - name: make
       run: cd build && cmake --build .
