--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
         mkdir build && cd build
         if [ "$RUNNER_OS" == "Windows" ]; then
-          cmake -DBOOST_ROOT="$BOOST_ROOT_1_72_0" ..
+          cmake -DCMAKE_PREFIX_PATH="C:/hostedtoolcache/windows/Boost/1.72.0" ..
         else
           cmake ..
         fi
