--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -72,13 +72,8 @@ jobs:
       run: cd build && cmake --build .
 
     - name: test
-      env:
-        CTEST_PARALLEL_LEVEL: 8
       run: |
-        if [ "$RUNNER_OS" == "Windows" ]; then
-          export PATH=$PWD/llvm-mingw/bin:$PATH
-          cd build && ctest -V
-        else
+        if [ "$RUNNER_OS" != "Windows" ]; then
           cd build && ctest -V
         fi
       shell: bash
