--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -62,6 +62,9 @@ jobs:
       run: |
         mkdir build && cd build
         if [ "$RUNNER_OS" == "Windows" ]; then
+          echo "BOOST_ROOT: $BOOST_ROOT"
+          echo "BOOST_ROOT_1_72_0: $BOOST_ROOT_1_72_0"
+          exit 1
           cmake -GNinja -DBOOST_ROOT="$BOOST_ROOT" ..
         else
           cmake ..
