Install in bin/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(cninja
   LANGUAGES CXX
-  VERSION 3.5.0
+  VERSION 3.5.1
   HOMEPAGE_URL "https://github.com/jcelerier/cninja"
   DESCRIPTION "Opinionated CMake config manager"
 )
@@ -98,7 +98,7 @@ install(
   TARGETS
     cninja
   RUNTIME DESTINATION
-    .
+    bin
 )
 
 # Tests
