--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -117,6 +117,7 @@ jobs:
       if: matrix.config.name == 'Tarball'
       run: |      
         # Deploy source archive too
+        git submodule update --init --recursive
         if [  ${{ matrix.config.name }} == 'Tarball' ]; then
           find . -name .git -exec rm -rf {} \; || true
           find . -name .git -exec rm -rf {} \; || true
@@ -132,6 +133,7 @@ jobs:
         fi
 
     - name: Upload
+      if: startsWith(github.ref, 'refs/tags' )
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
