--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -15,7 +15,7 @@ jobs:
             os: windows-latest,
             cxx: "../llvm-mingw/bin/clang++.exe",
             cxxflags: "",
-            release_flags: "era=win7 static lto=full small"
+            release_flags: "era=win7 static lto=full small -- -DBOOST_ROOT=$BOOST_ROOT_1_72_0"
           }
         - {
             name: "Ubuntu",
